// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Address.vue > Should display EOA accounts stats 1`] = `
"<div data-v-59205ce6="" class="v-container v-container--fluid v-locale--is-ltr" hash="0x123">
  <div data-v-59205ce6="" class="v-row mb-1">
    <!--v-if-->
    <div data-v-59205ce6="" class="v-col-lg-7 v-col-12">
      <div data-v-59205ce6="" class="v-row">
        <div data-v-59205ce6="" class="v-col v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> Balance </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">0.00000000000001 Ether</div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </div>
      <div data-v-59205ce6="" class="v-row">
        <div data-v-59205ce6="" class="v-col-lg-6 v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated" style="height: 100%;">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> Transactions </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">1<i data-v-59205ce6="" class="mdi-arrow-up-thin mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i>
              <hr data-v-59205ce6="" class="v-divider v-divider--vertical v-theme--light mx-4" aria-orientation="vertical" role="separator"> 2<i data-v-59205ce6="" class="mdi-arrow-down-thin mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i>
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
        <div data-v-59205ce6="" class="v-col-lg-6 v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated" style="height: 100%;">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> ERC-20 Transfers </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">3<i data-v-59205ce6="" class="mdi-arrow-up-thin mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i>
              <hr data-v-59205ce6="" class="v-divider v-divider--vertical v-theme--light mx-4" aria-orientation="vertical" role="separator"> 4<i data-v-59205ce6="" class="mdi-arrow-down-thin mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i>
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--density-default" tabindex="-1" role="tablist" data-v-59205ce6="">
    <!---->
    <div class="v-slide-group__container">
      <div class="v-slide-group__content"><button data-v-59205ce6="" type="button" class="v-btn v-tab-item--selected v-tab--selected v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="0" role="tab" aria-selected="true" id="transactionsTab" value="transactions"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transactions<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="transfersTab" value="transfers"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transfers<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="erc20BalancesTab" value="erc20Balances"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">ERC-20 Tokens<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="erc721BalancesTab" value="erc721Balances"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">ERC-721 Tokens<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <!---->
  </div>
  <!---->
  <div data-v-59205ce6="" class="v-window v-theme--light v-tabs-window">
    <div class="v-window__container">
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-window-item--active v-tabs-window-item">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mt-3">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <div data-v-59205ce6="" class="v-card-text">
              <address-transactions-list-stub data-v-59205ce6=""></address-transactions-list-stub>
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <!--v-if-->
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;

exports[`Address.vue > Should display ERC20 contract stats 1`] = `
"<div data-v-59205ce6="" class="v-container v-container--fluid v-locale--is-ltr" hash="0x123">
  <div data-v-59205ce6="" class="v-row mb-1">
    <div data-v-59205ce6="" class="v-col-lg-5 v-col-12">
      <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated" style="height: 100%;">
        <!---->
        <div class="v-card__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <!---->
        <div data-v-59205ce6="" class="v-card-title">ERC20 Contract</div>
        <div data-v-59205ce6="" class="v-card-subtitle mt-2"><span data-v-59205ce6="" class="v-chip v-theme--light v-chip--density-default v-chip--size-x-small v-chip--variant-tonal bg-success mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
          <!---->
          <!---->
          <div class="v-chip__content" data-no-activator="">ERC 20</div>
          <!---->
          <!----></span>
        </div>
        <div data-v-59205ce6="" class="v-card-text">
          <div data-v-59205ce6="" class="v-row">
            <div data-v-59205ce6="" class="v-col v-col-6"><small data-v-59205ce6="">Token Name</small><br data-v-59205ce6=""><span data-v-59205ce6="" class="ml-2"><hash-link-stub data-v-59205ce6="" type="token" contract="[object Object]" hash="0x123" withname="true" withtokenname="true"></hash-link-stub></span></div>
            <div data-v-59205ce6="" class="v-col v-col-6"><small data-v-59205ce6="">Token Symbol</small><br data-v-59205ce6=""><span data-v-59205ce6="" class="text-h6 ml-2">ERC</span></div>
            <div data-v-59205ce6="" class="v-col v-col-6"><small data-v-59205ce6="">Deployment Transaction</small><br data-v-59205ce6=""><span data-v-59205ce6="" class="ml-2"><hash-link-stub data-v-59205ce6="" type="transaction"></hash-link-stub></span></div>
            <div data-v-59205ce6="" class="v-col v-col-6"><small data-v-59205ce6="">Deployed By</small><br data-v-59205ce6=""><span data-v-59205ce6="" class="ml-2"><hash-link-stub data-v-59205ce6="" type="address"></hash-link-stub></span></div>
          </div>
        </div>
        <!---->
        <!----><span class="v-card__underlay"></span>
      </div>
    </div>
    <div data-v-59205ce6="" class="v-col-lg-7 v-col-12">
      <div data-v-59205ce6="" class="v-row">
        <div data-v-59205ce6="" class="v-col v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> Balance </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">0.00000000000001 Ether</div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </div>
      <div data-v-59205ce6="" class="v-row">
        <div data-v-59205ce6="" class="v-col-lg-6 v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated" style="height: 100%;">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> Transactions </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">
              <!--v-if--> 2
              <!--v-if-->
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
        <div data-v-59205ce6="" class="v-col-lg-6 v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated" style="height: 100%;">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> ERC-20 Transfers </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">3<i data-v-59205ce6="" class="mdi-arrow-up-thin mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i>
              <hr data-v-59205ce6="" class="v-divider v-divider--vertical v-theme--light mx-4" aria-orientation="vertical" role="separator"> 4<i data-v-59205ce6="" class="mdi-arrow-down-thin mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i>
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--density-default" tabindex="-1" role="tablist" data-v-59205ce6="">
    <!---->
    <div class="v-slide-group__container">
      <div class="v-slide-group__content"><button data-v-59205ce6="" type="button" class="v-btn v-tab-item--selected v-tab--selected v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="0" role="tab" aria-selected="true" id="transactionsTab" value="transactions"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transactions<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="transfersTab" value="transfers"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transfers<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="erc20BalancesTab" value="erc20Balances"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">ERC-20 Tokens<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="erc721BalancesTab" value="erc721Balances"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">ERC-721 Tokens<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="interactionsTab" value="interactions"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Read / Write<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="codeTab" value="code"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Code<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="logsTab" value="logs"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Logs<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button></div>
    </div>
    <!---->
  </div>
  <!---->
  <div data-v-59205ce6="" class="v-window v-theme--light v-tabs-window">
    <div class="v-window__container">
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="false" name="v-window-x-transition">
        <div class="v-window-item v-window-item--active v-tabs-window-item">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mt-3">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <div data-v-59205ce6="" class="v-card-text">
              <address-transactions-list-stub data-v-59205ce6=""></address-transactions-list-stub>
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="false" name="v-window-x-transition">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="false" name="v-window-x-transition">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="false" name="v-window-x-transition">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="false" name="v-window-x-transition">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="false" name="v-window-x-transition">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="false" name="v-window-x-transition">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;

exports[`Address.vue > Should display ERC721 contract stats 1`] = `
"<div data-v-59205ce6="" class="v-container v-container--fluid v-locale--is-ltr" hash="0x123">
  <div data-v-59205ce6="" class="v-row mb-1">
    <div data-v-59205ce6="" class="v-col-lg-5 v-col-12">
      <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated" style="height: 100%;">
        <!---->
        <div class="v-card__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <!---->
        <div data-v-59205ce6="" class="v-card-title">ERC721 Contract</div>
        <div data-v-59205ce6="" class="v-card-subtitle mt-2"><span data-v-59205ce6="" class="v-chip v-theme--light v-chip--density-default v-chip--size-x-small v-chip--variant-tonal bg-success mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
          <!---->
          <!---->
          <div class="v-chip__content" data-no-activator="">ERC 721</div>
          <!---->
          <!----></span>
        </div>
        <div data-v-59205ce6="" class="v-card-text">
          <div data-v-59205ce6="" class="v-row">
            <div data-v-59205ce6="" class="v-col v-col-6"><small data-v-59205ce6="">Token Name</small><br data-v-59205ce6=""><span data-v-59205ce6="" class="ml-2"><hash-link-stub data-v-59205ce6="" type="token" contract="[object Object]" hash="0x123" withname="true" withtokenname="true"></hash-link-stub></span></div>
            <div data-v-59205ce6="" class="v-col v-col-6"><small data-v-59205ce6="">Token Symbol</small><br data-v-59205ce6=""><span data-v-59205ce6="" class="text-h6 ml-2">ERC</span></div>
            <div data-v-59205ce6="" class="v-col v-col-6"><small data-v-59205ce6="">Deployment Transaction</small><br data-v-59205ce6=""><span data-v-59205ce6="" class="ml-2"><hash-link-stub data-v-59205ce6="" type="transaction"></hash-link-stub></span></div>
            <div data-v-59205ce6="" class="v-col v-col-6"><small data-v-59205ce6="">Deployed By</small><br data-v-59205ce6=""><span data-v-59205ce6="" class="ml-2"><hash-link-stub data-v-59205ce6="" type="address"></hash-link-stub></span></div>
          </div>
        </div>
        <!---->
        <!----><span class="v-card__underlay"></span>
      </div>
    </div>
    <div data-v-59205ce6="" class="v-col-lg-7 v-col-12">
      <div data-v-59205ce6="" class="v-row">
        <div data-v-59205ce6="" class="v-col v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> Balance </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">0.00000000000001 Ether</div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </div>
      <div data-v-59205ce6="" class="v-row">
        <div data-v-59205ce6="" class="v-col-lg-6 v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated" style="height: 100%;">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> Transactions </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">
              <!--v-if--> 2
              <!--v-if-->
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
        <div data-v-59205ce6="" class="v-col-lg-6 v-col-12">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated" style="height: 100%;">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <div class="v-card-item">
              <!---->
              <div class="v-card-item__content">
                <!---->
                <div class="v-card-subtitle"> ERC-20 Transfers </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div data-v-59205ce6="" class="v-card-text text-h4 text-medium-emphasis" align="center">3<i data-v-59205ce6="" class="mdi-arrow-up-thin mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i>
              <hr data-v-59205ce6="" class="v-divider v-divider--vertical v-theme--light mx-4" aria-orientation="vertical" role="separator"> 4<i data-v-59205ce6="" class="mdi-arrow-down-thin mdi v-icon notranslate v-theme--light v-icon--size-x-small" aria-hidden="true"></i>
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--density-default" tabindex="-1" role="tablist" data-v-59205ce6="">
    <!---->
    <div class="v-slide-group__container">
      <div class="v-slide-group__content"><button data-v-59205ce6="" type="button" class="v-btn v-tab-item--selected v-tab--selected v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="0" role="tab" aria-selected="true" id="transactionsTab" value="transactions"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transactions<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="transfersTab" value="transfers"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transfers<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="erc20BalancesTab" value="erc20Balances"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">ERC-20 Tokens<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="erc721BalancesTab" value="erc721Balances"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">ERC-721 Tokens<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="interactionsTab" value="interactions"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Read / Write<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="codeTab" value="code"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Code<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button><button data-v-59205ce6="" type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" id="logsTab" value="logs"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Logs<div class="v-tab__slider"></div></span>
          <!---->
          <!---->
        </button></div>
    </div>
    <!---->
  </div>
  <!---->
  <div data-v-59205ce6="" class="v-window v-theme--light v-tabs-window">
    <div class="v-window__container">
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-window-item--active v-tabs-window-item">
          <div data-v-59205ce6="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated mt-3">
            <!---->
            <div class="v-card__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <!---->
            <div data-v-59205ce6="" class="v-card-text">
              <address-transactions-list-stub data-v-59205ce6=""></address-transactions-list-stub>
            </div>
            <!---->
            <!----><span class="v-card__underlay"></span>
          </div>
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <transition-stub data-v-59205ce6="" appear="false" persisted="false" css="true" disabled="true">
        <div class="v-window-item v-tabs-window-item" style="display: none;">
          <!---->
        </div>
      </transition-stub>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;
